// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge count 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-read"
  >
    <BellIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
    <span
      className="pf-c-notification-badge__count"
    >
      3
    </span>
  </span>
</Button>
`;

exports[`false NotificationBadge 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-unread"
  >
    <BellIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </span>
</Button>
`;

exports[`false NotificationBadge needs attention 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-attention"
  >
    does not need attention
     Badge
  </span>
</Button>
`;

exports[`true NotificationBadge 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-read"
  >
    <BellIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </span>
</Button>
`;

exports[`true NotificationBadge needs attention 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-attention"
  >
    needs attention
     Badge
  </span>
</Button>
`;
